<resources>
    <string name="app_name">Health Care</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="err_msg_name">Enter your Email Id</string>
    <string name="err_msg_email">Enter valid name/email address</string>
    <string name="err_msg_password">Password Cannot Be Empty</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="weight">Weight in lbs</string>
    <string name="height">Height in Inches</string>
    <string name="phone">Cell# (000)-000-00000</string>
    <string name="repass">Retype Password</string>
    <string name="singup">Sign Up</string>
    <string name="dob">Data of Birth</string>
    <string name="err_regpass">Password Must Contain Special Character/Cannot be Empty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_vitalsigns">Vital Signs</string>
    <string name="nav_medication">Medication Details</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_diet">Diet</string>
    <string name="nav_updateprofile">Update Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_help">Help</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Vital Signs</item>
        <item>Medication Details</item>
        <item>Notes</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="remainder_items">
        <item>Once a Day</item>
        <item>Twice a Day</item>
        <item>3 Times a Day</item>
        <item>4 Times a Day</item>
    </string-array>

    <string-array name="medicineType">
        <item>Capsule</item>
        <item>Tablet</item>
        <item>Syrup</item>
    </string-array>

    <string-array name="blood_types">
        <item>Select Blood Group</item>
        <item>O+</item>
        <item>O-</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string name="blood_prompt">Blood Group</string>


    <string-array name="Cholestrol_level">
        <item>Blood Cholestrol Level</item>
        <item>Good</item>
        <item>Borderline</item>
        <item>High</item>
        <item>Low</item>
    </string-array>


    <string-array name="pressure_level">
        <item>Blood Pressure Level</item>
        <item>Low blood pressure</item>
        <item>Normal</item>
        <item>Prehypertension</item>
        <item>High Blood Pressure (HP stage 1)</item>
        <item>High Blood Pressure (HP stage 2)</item>
        <item>High Blood Pressure Crisis</item>
    </string-array>
    <string name="title_activity_test">Test</string>

</resources>
