<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.krishnchinya.personalhealthmonitoringsystem.activity.Registration"
    android:background="@android:color/background_light">

<LinearLayout
    android:id="@+id/activity_Update_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:paddingLeft="30px"
    android:paddingTop="30px"
    android:paddingRight="30px"
    android:paddingBottom="30px"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="71dp" android:src="@drawable/logo"
        android:id="@+id/UpdateimageView" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_etUpdateFirstName"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:id="@+id/etUpdateFirstName"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_etUpdateLastName"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:ems="10"
        android:id="@+id/etUpdateLastName"
        android:layout_marginTop="5dp"
        />
</android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="Gender"
            android:id="@+id/etUpdategender" android:enabled="false"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp" android:layout_toRightOf="@id/etUpdategender">

        <RadioButton
            style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/btnUpdateMale"
            android:textColor="@color/colorPrimary"
            />

        <RadioButton
            style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/btnUpdateFeale"
            android:textColor="@color/colorPrimary"
            />

    </RadioGroup>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_etUpdatedob">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUpdatedob"
            android:hint="@string/dob"
            android:layout_weight="0.25" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/input_etUpdateWeight">

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/etUpdateWeight"
                android:hint="@string/weight"
                android:layout_weight="0.25" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/input_etUpdateHeight">

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/etUpdateHeight"
                android:hint="@string/height"
                android:layout_weight="0.25"
                />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/input_etUpdatePhone">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:id="@+id/etUpdatePhone"
        android:inputType="phone"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        android:id="@+id/btnUpdatepro"
        style="@style/Widget.AppCompat.Button.Colored"
        />


</LinearLayout>
</ScrollView>