<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.krishnchinya.personalhealthmonitoringsystem.Login"
    android:background="@android:color/background_light">

    <!--<Button-->
        <!--android:id="@+id/dummy_button"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1" />-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="192dp" android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/login"
        android:id="@+id/rlfglayout"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="160dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_height="wrap_content" android:text="New User"
            android:id="@+id/NewUser" />

        <Button
            android:layout_width="160dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_height="wrap_content" android:id="@+id/forgotPass"
            android:text="Forgot Password" android:layout_toRightOf="@id/NewUser"
             />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
        android:layout_below="@+id/input_username"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp" android:src="@drawable/password" android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/hint_password" android:layout_marginLeft="30dp" android:layout_alignParentTop="true"/>

        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_username"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp" android:src="@drawable/user" android:layout_marginTop="10dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userName"
                android:hint="@string/user_name" android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content" android:text="@string/btn_login"
        android:id="@+id/login"
        android:layout_below="@+id/input_password"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlfglayout"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_action_fingerprint"
            android:id="@+id/icon"
            android:paddingTop="2dp"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="One-touch Sign In"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/errorText"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:gravity="center"/>

    </LinearLayout>


</RelativeLayout>
